recursion.lessons.recursion.tree.Tree.scala.error
Tree:15: error: not enough arguments for method branche: (length: Double)Unit.
Unspecified value parameter length.
branche();
       ^Tree:17: error: not enough arguments for method branche: (length: Double)Unit.
Unspecified value parameter length.
branche();
       ^